# jax_kmeans

./: README.md  pyproject.toml  test.py
clax/: kmeans.py
jax_kmeans/: __init__.py
