[project]
name = "jax_kmeans"
authors = [
    {name = "Cody Lewis", email = "hello@codymlewis.com"}
]
version = "0.0.1"
description = "Pure jax implementations of k-means clustering"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "chex",
]

[project.urls]
repository = "https://github.com/codymlewis/clax"
